syntax = "proto3";

package pb;

option go_package = "go_challenge/pb";

import "user.proto";
import "google/protobuf/timestamp.proto";

//the end number is very important to identify the message while serialized
// using small numbers 1 - 15 only take one bytes - so we're saving sth in between
message LoginUserRequest{
  string user_name = 1;
  string password = 2;
}

message LoginUserResponse{
  User user = 1;
  string session_id = 2;
  string access_token= 3;
  google.protobuf.Timestamp access_token_expires_at  = 4;
  string refresh_token = 5;
  google.protobuf.Timestamp refresh_token_expires_at = 6;
}
